--- a/Bin2Dec.htm
+++ b/Bin2Dec.htm
@@ -1,3 +1,4 @@
+<!-- Translator from binary to decimal. Includes errors if the number is negative, 0 or not defined / if there are more than 8 characters / if any of the characters isn't a 0 or a 1. Includes the ability to input less than 8 characters -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -55,4 +56,5 @@
 
     </script>
 </body>
+<!-- Gaia Chiavazza 05/04/2024 23:36 -->
 </html>
