--- a/gameOfLifeMatrix.htm
+++ b/gameOfLifeMatrix.htm
@@ -2,47 +2,38 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <title>title</title>
-    <style>   /*CSS done by Chat GPT*/
-    body {
-        background-color: wheat;
-        margin: 0;
-        padding: 0;
-        font-family: Arial, sans-serif;
-    }
-
-    /* Container for buttons to align them better */
-    .button-container {
-        display: flex;
-        justify-content: center; /* Centers buttons horizontally */
-        gap: 20px; /* Space between buttons */
-        margin: 20px; /* Margin to create space around the buttons */
-    }
-
-    #buttonTest, #buttonClear {
-        padding: 10px 20px;
-        background-color: #4CAF50;
-        color: white;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        font-size: 16px;
-        width: 100%; /* Makes buttons responsive */
-        max-width: 150px; /* Sets a max width for the buttons */
-        text-align: center;
-    }
-
-    /* Media query for smaller screens */
-    @media (max-width: 600px) {
-        .button-container {
-            flex-direction: column; /* Stacks buttons vertically on smaller screens */
+    <title>Game of life</title>
+    <style> /*CSS done by Chat GPT*/
+        body
+        {
+            background-color: wheat;
         }
-
-        #buttonTest, #buttonClear {
-            width: 100%; /* Buttons take full width on small screens */
-            max-width: none; /* Removes the max width restriction */
+        #buttonTest {  /* Button CSS done by Chat GPT */
+            margin: 20px;
+            padding: 10px 20px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+            display: block;
+            position: absolute;
+            left:835px;
         }
-    }
+        #buttonClear {  /* Button CSS done by Chat GPT */
+            margin: 20px;
+            padding: 10px 20px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+            display: block;
+            position: absolute;
+            left:945px;
+        }
     </style>
 </head>
 <body onload="startFunction()">
